log
Wed 15 May 2024 07:04:43 PM UTC: 
 tests:  0|5
total_score: 0/70
bf75303
Wed 15 May 2024 07:11:02 PM UTC: 
 sudoku.c | 37 ++++++++++++++++++++++++++++++++++++-
 1 file changed, 36 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8dbfd7a
Wed 15 May 2024 07:12:18 PM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
0357ceb
Wed 15 May 2024 07:16:17 PM UTC: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
b1e877d
Wed 15 May 2024 07:20:34 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
35bb785
Wed 15 May 2024 07:23:00 PM UTC: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
009ff8d
Wed 15 May 2024 07:33:48 PM UTC: 
 sudoku.c | 56 ++++----------------------------------------------------
 1 file changed, 4 insertions(+), 52 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:132:11: error: unused variable ‘S’ [-Werror=unused-variable]
  132 |    Stack* S=createStack();
      |           ^
sudoku.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
  134 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ad85b7c
Wed 15 May 2024 07:34:07 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
  133 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
31bd6c2
Wed 15 May 2024 07:34:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
ab4f493
Wed 15 May 2024 07:35:41 PM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
42e42c6
Wed 15 May 2024 07:36:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
a521016
Wed 15 May 2024 07:41:30 PM UTC: 
 sudoku.c | 37 ++++++++++++++++++++++++++++---------
 1 file changed, 28 insertions(+), 9 deletions(-)
 tests:  6|2
total_score: 45/70
f2e9d01
Wed 15 May 2024 07:42:39 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
d006d7e
Wed 15 May 2024 07:45:12 PM UTC: 
 sudoku.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  0|0
02d5a05
Wed 15 May 2024 07:45:42 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
d345aa3
Wed 15 May 2024 07:45:59 PM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  6|2
total_score: 45/70
584d64c
Wed 15 May 2024 07:52:31 PM UTC: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:163:20: error: returning ‘Stack *’ {aka ‘List *’} from a function with incompatible return type ‘Node *’ [-Werror=incompatible-pointer-types]
  163 |             return S;
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
482a549
Wed 15 May 2024 07:52:42 PM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  0|0
b004c4d
Wed 15 May 2024 07:57:40 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:175:11: error: returning ‘Stack *’ {aka ‘List *’} from a function with incompatible return type ‘Node *’ [-Werror=incompatible-pointer-types]
  175 |    return S;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
ac19ecf
Wed 15 May 2024 08:09:16 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7088ef0
Wed 15 May 2024 08:09:33 PM UTC: 
 sudoku.c | 19 +------------------
 1 file changed, 1 insertion(+), 18 deletions(-)
 tests:  6|2
total_score: 45/70
8edbc59
Wed 15 May 2024 08:13:17 PM UTC: 
 sudoku.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
 tests:  6|2
total_score: 45/70
cfa4b58
Wed 15 May 2024 08:14:56 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
2b8f4a1
Wed 15 May 2024 08:15:42 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 55/70
ba524fb
